--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.agile_cards">
+    package="com.voostack.agile_cards">
    <application
         android:label="agile_cards"
         android:name="${applicationName}"
