--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   dio: ^4.0.6
   auto_size_text: ^3.0.0
   fluttertoast: ^8.1.2
+  uuid: ^3.0.7
+  clipboard: ^0.1.3
 
   # state
   flutter_bloc: ^8.1.1
@@ -32,12 +34,19 @@ dependencies:
   form_builder_validators: ^8.2.0
 
   #ux
-  clipboard: ^0.1.3
   pull_to_refresh: ^2.0.0
   reorderables: ^0.5.0
   expansion_tile_card: ^2.0.0
   timelines: ^0.1.0
   pluto_grid: ^5.3.0
+
+  #annotation
+  json_annotation: ^4.7.0
+  copy_with_extension_gen: ^5.0.0
+
+  #ui
+  flip_card: ^0.6.0
+  stacked_card_carousel: ^0.0.4
 
   #firebase
   firebase_core: ^2.2.0
@@ -47,10 +56,13 @@ dependencies:
   firebase_storage: ^11.0.5
   firebase_dynamic_links: ^5.0.2
   firebase_auth: ^4.1.2
+  firebase_database: ^10.0.9
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner:
+  json_serializable:
 
   flutter_lints: ^2.0.0
 
