--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   fluttertoast: ^8.1.2
   uuid: ^3.0.7
   clipboard: ^0.1.3
+  form_field_validator: ^1.1.0
 
   # state
   flutter_bloc: ^8.1.1
