--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = agile_cards
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.agileCards
+PRODUCT_BUNDLE_IDENTIFIER = com.voostack.agileCards
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2023 com.example. All rights reserved.
