--- a/macos/Runner/GoogleService-Info.plist
+++ b/macos/Runner/GoogleService-Info.plist
@@ -13,7 +13,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.example.agileCards</string>
+	<string>com.voostack.agileCards</string>
 	<key>PROJECT_ID</key>
 	<string>agilecards-da16f</string>
 	<key>STORAGE_BUCKET</key>
