--- a/android/app/src/debug/AndroidManifest.xml
+++ b/android/app/src/debug/AndroidManifest.xml
@@ -1,9 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.voostack.agileCards">
+    package=" com.voostack.agilecardssprintplanning">
     <!-- The INTERNET permission is required for development. Specifically,
          the Flutter
     tool needs it to communicate with the running application
-         to allow setting breakpoints,
+         to allow setting
+     breakpoints,
     to provide hot reload, etc.
     -->
     <uses-permission android:name="android.permission.INTERNET" />
