--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-  "cSpell.words": ["Fluttertoast", "reorderables"]
+  "cSpell.words": [
+    "agilecardssprintplanning",
+    "Fluttertoast",
+    "reorderables",
+    "voostack"
+  ]
 }
