--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,7 @@
 name: agile_cards
 description: A new Flutter project.
-
 publish_to: 'none'
-
-version: 1.0.0+1
+version: 1.0.1+1
 
 environment:
   sdk: '>=2.18.6 <3.0.0'
@@ -23,6 +21,8 @@ dependencies:
   uuid: ^3.0.7
   clipboard: ^0.1.3
   form_field_validator: ^1.1.0
+  share_plus: ^6.3.0
+  image_picker: ^0.8.6
 
   # state
   flutter_bloc: ^8.1.1
@@ -50,14 +50,14 @@ dependencies:
   stacked_card_carousel: ^0.0.4
 
   #firebase
-  firebase_core: ^2.2.0
-  firebase_crashlytics: ^3.0.2
-  firebase_analytics: ^10.0.2
-  firebase_performance: ^0.9.0+5
-  firebase_storage: ^11.0.5
-  firebase_dynamic_links: ^5.0.2
-  firebase_auth: ^4.1.2
-  firebase_database: ^10.0.9
+  firebase_core:
+  firebase_crashlytics:
+  firebase_analytics:
+  firebase_performance:
+  firebase_storage:
+  firebase_dynamic_links:
+  firebase_auth:
+  firebase_database:
 
 dev_dependencies:
   flutter_test:
