fixed app domain name and dynamic list and fallback url for android

--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,7 @@ app.*.symbols
 
 # Obfuscation related
 app.*.map.json
+key.properties
 
 # Android Studio will place build artifacts here
 /android/app/debug
