--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "agile_cards" "\0"
+            VALUE "FileDescription", "Agile Cards" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "agile_cards" "\0"
+            VALUE "InternalName", "Agile Cards" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2023 com.example. All rights reserved." "\0"
             VALUE "OriginalFilename", "agile_cards.exe" "\0"
-            VALUE "ProductName", "agile_cards" "\0"
+            VALUE "ProductName", "Agile Cards" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
