--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,20 +11,19 @@ dependencies:
     sdk: flutter
 
   #utils
-  go_router: ^6.0.0
+  go_router: ^7.1.1
   cupertino_icons: ^1.0.2
   get_it: ^7.2.0
-  flutter_secure_storage: ^7.0.1
-  dio: ^4.0.6
+  flutter_secure_storage: ^8.0.0
+  dio: ^5.1.2
   auto_size_text: ^3.0.0
   fluttertoast: ^8.1.2
   uuid: ^3.0.7
   clipboard: ^0.1.3
-  form_field_validator: ^1.1.0
-  share_plus: ^6.3.0
+  share_plus: ^7.0.1
   image_picker: ^0.8.6
-  flutter_svg: ^1.1.6
-  flutter_launcher_icons: ^0.11.0
+  flutter_svg: ^2.0.6
+  flutter_launcher_icons: ^0.13.1
 
   # state
   flutter_bloc: ^8.1.1
@@ -32,23 +31,23 @@ dependencies:
   shared_preferences:
   equatable:
   meta: ^1.3.0
-  very_good_analysis: ^3.1.0
-  flutter_form_builder: ^7.4.0
-  form_builder_validators: ^8.2.0
+  very_good_analysis: ^5.0.0+1
+  flutter_form_builder:
+  form_builder_validators:
 
   #ux
   pull_to_refresh: ^2.0.0
-  reorderables: ^0.5.0
+  reorderables: ^0.6.0
   expansion_tile_card: ^2.0.0
   timelines: ^0.1.0
-  pluto_grid: ^5.3.0
+  pluto_grid:
 
   #annotation
   json_annotation: ^4.7.0
   copy_with_extension_gen: ^5.0.0
 
   #ui
-  flip_card: ^0.6.0
+  animate_do: ^3.0.2
   stacked_card_carousel: ^0.0.4
   font_awesome_flutter: ^10.3.0
 
